--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "^12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-modal": "^3.14.4"
+    "react-file-viewer": "^1.2.1",
+    "react-modal": "^3.14.4",
+    "react-pdf": "^5.7.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
