--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "17.0.2",
     "react-file-viewer": "^1.2.1",
     "react-modal": "^3.14.4",
-    "react-pdf": "^5.7.1"
+    "react-pdf": "^5.7.1",
+    "react-social-icons": "^5.11.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
