--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-file-viewer": "^1.2.1",
     "react-modal": "^3.14.4",
     "react-pdf": "^5.7.1",
+    "react-router-dom": "6",
     "react-social-icons": "^5.11.0"
   },
   "devDependencies": {
