--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@dhaiwat10/react-link-preview": "^1.12.2",
     "cross-env": "^7.0.3",
     "next": "^12.0.8",
+    "nodemailer": "^6.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-file-viewer": "^1.2.1",
